results/results-1/v2.6.18/output.txt
scripts/kconfig/conf -s arch/x86_64/Kconfig
include/config/auto.conf:62:warning: symbol value 'cubic' invalid for DEFAULT_TCP_CONG
include/config/auto.conf:63:warning: symbol value '/sbin/hotplug' invalid for UEVENT_HELPER_PATH
include/config/auto.conf:154:warning: symbol value 'elf64-x86-64' invalid for OUTPUT_FORMAT
include/config/auto.conf:218:warning: symbol value 'arch/x86/configs/x86_64_defconfig' invalid for ARCH_DEFCONFIG
include/config/auto.conf:387:warning: symbol value '(none)' invalid for DEFAULT_HOSTNAME
include/config/auto.conf:415:warning: symbol value '' invalid for EXTRA_FIRMWARE
include/config/auto.conf:498:warning: symbol value '-fcall-saved-rdi -fcall-saved-rsi -fcall-saved-rdx -fcall-saved-rcx -fcall-saved-r8 -fcall-saved-r9 -fcall-saved-r10 -fcall-saved-r11' invalid for ARCH_HWEIGHT_CFLAGS
include/config/auto.conf:759:warning: symbol value 'selinux' invalid for DEFAULT_SECURITY
include/config/auto.conf:810:warning: symbol value 'minstrel_ht' invalid for MAC80211_RC_DEFAULT
include/config/auto.conf:857:warning: symbol value '' invalid for CROSS_COMPILE
  CHK     include/linux/version.h
  UPD     include/linux/version.h
  CHK     include/linux/utsrelease.h
  UPD     include/linux/utsrelease.h
  CC      arch/x86_64/kernel/asm-offsets.s
  GEN     include/asm-x86_64/asm-offsets.h
  CHECK   scripts/mod/empty.c
  CC      scripts/mod/empty.o
  HOSTCC  scripts/mod/mk_elfconfig
  MKELF   scripts/mod/elfconfig.h
  HOSTCC  scripts/mod/file2alias.o
  HOSTCC  scripts/mod/modpost.o
  HOSTCC  scripts/mod/sumversion.o
scripts/mod/sumversion.c: In function ‘get_src_version’:
scripts/mod/sumversion.c:384:16: error: ‘PATH_MAX’ undeclared (first use in this function)
  char filelist[PATH_MAX + 1];
                ^
scripts/mod/sumversion.c:384:16: note: each undeclared identifier is reported only once for each function it appears in
scripts/mod/sumversion.c:384:7: warning: unused variable ‘filelist’ [-Wunused-variable]
  char filelist[PATH_MAX + 1];
       ^
make[2]: *** [scripts/mod/sumversion.o] Error 1
make[1]: *** [scripts/mod] Error 2
make: *** [scripts] Error 2
